# mmnist-fd

./: README.md  __init__.py  example_frechet_distance.py  frechet_distance.py  main.py  pyproject.toml  utils.py
.github/workflows/: python-tests.yml
mmnist_fd/: __init__.py  frechet_distance.py  generate_svg_fp.py  generate_svg_lp.py  train_svg_fp.py  train_svg_lp.py
mmnist_fd/models/: __init__.py
mmnist_fd/pretrained_models/: __init__.py
svg_mmnist_fd/: __init__.py  frechet_distance.py  generate_svg_fp.py  generate_svg_lp.py  train_svg_fp.py  train_svg_lp.py  utils.py
tests/: __init__.py  test_frechet_distance.py  test_import.py
