[project]
name = "mmnist-fd"
version = "0.1.0"
description = "Compute the Fréchet distance between two sets of (Stochastic) Moving MNIST images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.setuptools]
packages = ["mmnist_fd"]

[tool.setuptools.package-data]
mmnist_fd = ["pretrained_models/*.pth"]
