[project]
name = "svg-mmnist-fd"
version = "0.1.0"
description = "Compute the Fréchet distance between two sets of (Stochastic) Moving MNIST images"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"svg_mmnist_fd" = ["pretrained_models/*.pth"]
